# loopscape

./: .gitignore  Cargo.toml  DOCS.md  README.md  ToDos.md
frontend/: Cargo.toml
frontend/src/: lib.rs  main.rs
src/: lib.rs  main.rs  tests.rs
src/soundscape/: mod.rs
