[package]
name = "frontend"
version = "0.1.0"
authors = ["Mec-iS <tunedconsulting@gmail.com>"]
edition = "2018"

[dependencies]
stdweb = "*"
yew = { git = "https://github.com/DenisKolodin/yew", features = ["cbor"] }
yew-router = { git = "https://github.com/saschagrunert/yew-router" }
loopscope = { path = "../"}

[profile.release]
debug = true